--- a/projects/ng-bootstrap-addons/table/src/components/column-filter-form/column-filter-form.component.html
+++ b/projects/ng-bootstrap-addons/table/src/components/column-filter-form/column-filter-form.component.html
@@ -38,7 +38,7 @@
             inputClass="no-validate"
             size="sm"
             [options]="options()"
-            [multiple]="multiple"
+            [multiple]="multiple()"
             [(ngModel)]="state.value"
             name="filterList"
           ></nba-multiselect>
